--- a/index.html
+++ b/index.html
@@ -3,27 +3,44 @@
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
+    <title>Mr.PheonixX Team | Sword Art Online النسخة العربية الكاملة</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sword Art Online - النسخة العربية</title>
+    <meta name="description" content="اقرأ Sword Art Online والمسار البديل Progressive كاملة باللغة العربية بترجمة Mr.PheonixX Team و DeepL Premium.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Mr.PheonixX Team – Sword Art Online بالعربية</h1>
+        <h1>⚔️ Mr.PheonixX Team ⚔️</h1>
+        <h2>Sword Art Online & Progressive – Full Arabic Edition</h2>
         <nav>
             <a href="#">الرئيسية</a>
             <a href="#">SAO</a>
             <a href="#">Progressive</a>
+            <a href="#">روابط الفريق</a>
         </nav>
     </header>
+
     <main>
-        <section>
-            <h2>مرحبا بك!</h2>
-            <p>تجربة قراءة تفاعلية، محمية، ومترجمة بالكامل من Mr.PheonixX Team.</p>
+        <section class="intro">
+            <h3>مرحبا بك في أول موقع رسمي لقراءة SAO بالعربية!</h3>
+            <p>ترجمة وتدقيق: Mr.PheonixX Team × DeepL Premium</p>
+            <button onclick="alert('قريبًا سيتم تفعيل التنقل بين الفصول')">ابدأ القراءة</button>
+        </section>
+
+        <section class="features">
+            <h3>✨ خصائص الموقع</h3>
+            <ul>
+                <li>3 أنماط للقراءة: Scroll / Slide / Flipbook 3D</li>
+                <li>أوضاع: ليلي 🌙 – ورقي 📜 – حماية للعين 👁️</li>
+                <li>حماية ضد النسخ والتحميل والتصوير 🔒</li>
+                <li>توافق كامل مع الموبايل 📱</li>
+                <li>روابط الفريق: YouTube, Twitter, Patreon, Discord</li>
+            </ul>
         </section>
     </main>
+
     <footer>
-        <p>جميع الحقوق محفوظة © Mr.PheonixX Team</p>
+        <p>جميع الحقوق محفوظة © Mr.PheonixX Team 2025</p>
     </footer>
 </body>
 </html>
