--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             <ul>
                 <li>3 أنماط للقراءة: Scroll / Slide / Flipbook 3D</li>
                 <li>أوضاع: ليلي 🌙 – ورقي 📜 – حماية للعين 👁️</li>
-                <li>حماية ضد النسخ والتحميل والتصوير 🔒</li>
-                <li>توافق كامل مع الموبايل 📱</li>
+                <li>توافق كامل مع جميع الانظمة 📱</li>
                 <li>روابط الفريق: YouTube, Twitter, Patreon, Discord</li>
             </ul>
         </section>
